input/ec2special: use default bucket

--- a/input/ec2special.tf.in
+++ b/input/ec2special.tf.in
@@ -7,11 +7,10 @@
       ]
     }
   env: [production]
+  bucket: "${aws_s3_bucket.special_bucket.id}"
   do:
-  - bucket: "${aws_s3_bucket.special_bucket.id}"
-    perm: READ
+  - perm: READ
   - bucket: "some-other-buckets"
     perm: ALL
-  - bucket: "${aws_s3_bucket.special_bucket.id}"
-    perm: ["s3:Put*", "s3:Get*"]
+  - perm: ["s3:Put*", "s3:Get*"]
     path: "${aws_s3_bucket.some_bucket_for_production.arn}/foo/*"
