--- a/examples/input/ec2special.tf.in
+++ b/examples/input/ec2special.tf.in
@@ -14,3 +14,10 @@
     perm: ALL
   - perm: ["s3:Put*", "s3:Get*"]
     path: "${aws_s3_bucket.some_bucket_for_production.arn}/foo/*"
+
+- service: "sns.sns.amazonaws.com"
+  env: [production]
+  bucket: "${aws_s3_bucket.special_bucket.id}"
+  do:
+  - perm: "s3:GetBucketLocation"
+    path: "${aws_s3_bucket.special_bucket.arn}"
